fixed horizontal scroll

--- a/css/custom.css
+++ b/css/custom.css
@@ -104,7 +104,7 @@ text-decoration: inherit;
 }
 
 .project {
-    width: 300px;
+    width: 275px;
     height: 125px;
     background-color: lightgrey;
     margin: 20px;
